<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="start_header">Logga in</string>
	<string name="app_name">Alice</string>



	<string name="button1">Tryck på mig!</string>
	<string name="start_user">Användarnamn:</string>
	<string name="start_password">Lösenord:</string>
	<string name="start_exit">Avsluta</string>
	<string name="start_ok">Logga in</string>

	<string name="map_close">Stäng programmet!</string>
	<string name="map_header">Karta</string>

	<string name="messagechoice_new_text">Nytt textmedd.</string>
	<string name="messagechoice_inbox">Inkorg</string>

	<string name="draft_draft">Redigera utkast</string>

	<string name="send_destUser">Mottagare:</string>
	<string name="send_subject">Ämne:</string>
	<string name="send_message">Meddelande:</string>
	<string name="send_send">Skicka</string>
	<string name="contact_foot">Lägg till dessa mottagare</string>
	<string name="main_logout">Logga ut</string>
	<string name="main_setup">Inställningar</string>
	<string name="main_contact_list">Kontaktlista</string>
	<string name="main_map">Karta</string>
	<string name="main_call">Samtal</string>
	<string name="main_message">Meddelanden</string>
	<string name="main_sos">SOS</string>
	<string name="main_services">Externa tjänster</string>
    <string name="add_contact_add">Lägg till kontakt:</string>
    <string name="add_contact_save">Spara</string>
	<string name="sos_meddelande">SOS-meddelande:</string>
	<string name="map_menu_follow">Följ mig</string>
    <string name="map_menu_toggle">Kartvy/Satellitvy</string>
    <string name="map_menu_myLocation">Gå till min position</string>
    <string name="map_menu_traffic">Trafik</string>
    <string name="edit_contact_edit">Redigera kontakt:</string>
    <string name="cancel">Avbryt</string>
    <string name="messagechoice_outbox">Utkorg</string>
    <string name="messagechoice_draft">Utkast</string>
    <string name="messagechoice_new_picture">Nytt bildmedd.</string>
    <string name="send_image_message_choice">Välj bild</string>
    <string name="accept_call_incoming">Inkommer samtal från</string>
    <string name="accept_call_answer">Svara</string>
    <string name="accept_call_deny">Avvisa</string>
	<string name="back">Bakåt</string>
    <string name="contactAddress">SIP Address to contact</string>
    <string name="talk">Talk</string>
    <string name="enter_number"></string>
	<string name="rensa">Rensa</string>
	<string name="low_power">Strömsparläge</string>
	<string name="normal_power">Normalt strömläge</string>
	<string name="automatic_power">Automatisk</string>

	<string name="power_programs">Strömlägen</string>
	<string name="application_name">Alice</string>

	<string name="start">0x7f030018</string>

	<string name="download_text">Synkning:  </string>
</resources>
