<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/power_programs"
		android:layout_marginTop="12dip"
		android:layout_marginLeft="22dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/power_programs_textview"></TextView>
	<RadioGroup
		android:id="@+id/power_program_radio_group"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dip"
		android:layout_marginLeft="15dip">
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/normal_power"
			android:id="@+id/normal_power_radio_button"></RadioButton>
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/low_power"
			android:id="@+id/low_power_radio_button"></RadioButton>
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/automatic_power"
			android:id="@+id/automatic_power_radio_button"></RadioButton>
	</RadioGroup>
</LinearLayout>
