<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/sos_meddelande_textview"
		android:text="@string/sos_meddelande"
		android:layout_marginLeft="30dip"
		android:layout_marginTop="40dip"
		android:layout_marginBottom="2dip"
		android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
	<EditText
		android:layout_width="match_parent"
		android:gravity="top"
		android:id="@+id/sos_meddelande_edittext"
		android:layout_marginLeft="30dip"
		android:layout_marginRight="30dip"
		android:maxLength="300" android:layout_height="210dp"
		android:background="@drawable/rounded_edittext">
		<requestFocus></requestFocus>
	</EditText>
	<RelativeLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/linearLayout1"
			android:orientation="vertical"
			android:layout_marginLeft="30dip"
			android:layout_marginRight="170dip"
			android:layout_marginTop="10dip">
			<Button
				android:id="@+id/sos_rensa_meddelande"
				android:text="@string/rensa"
				android:layout_gravity="left"
				android:textColor="#FFFFFF"
				android:layout_marginLeft="0dip" android:background="@drawable/rounded_button" android:layout_height="30dip" android:layout_width="120dip"></Button>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/linearLayoutNewPicture"
			android:orientation="vertical"
			android:layout_marginLeft="170dip"
			android:layout_marginRight="30dip"
			android:layout_marginTop="10dip">

			<Button
				android:id="@+id/sos_send_message_button"
				android:text="@string/send_send"
				android:textColor="#FFFFFF"
				android:layout_gravity="right" android:background="@drawable/rounded_button2" android:layout_height="30dip" android:layout_width="120dip"></Button>


		</LinearLayout>
	</RelativeLayout>


</LinearLayout>
