<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView
		android:id="@+id/textView1"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/send_destUser"
		android:layout_marginLeft="30dip"
		android:layout_marginTop="20dip"></TextView>
	<EditText
		android:layout_width="match_parent"
		android:inputType="textPersonName"
		android:id="@+id/destUser"
		android:layout_marginLeft="30dip"
		android:layout_marginRight="30dip"
		android:singleLine="true"
		android:editable="false"
		android:background="@drawable/rounded_edittext" android:layout_height="30dip">
		<requestFocus></requestFocus>
	</EditText>
	<TextView
		android:id="@+id/textView2"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginLeft="30dip"
		android:layout_marginTop="10dip"
		android:text="@string/send_subject"></TextView>
	<EditText
		android:layout_width="match_parent"
		android:inputType="textPersonName"
		android:id="@+id/subject"
		android:layout_marginLeft="30dip"
		android:layout_marginRight="30dip"
		android:maxLength="30"
		android:singleLine="true"
		android:background="@drawable/rounded_edittext" android:layout_height="30dip"></EditText>

	<RelativeLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<LinearLayout
			android:id="@+id/linearLayout1"
			android:orientation="vertical"
			android:layout_marginLeft="30dip"
			android:layout_marginRight="170dip"
			android:layout_marginTop="10dip" android:layout_width="120dip" android:layout_height="50dip">
			<Button
				android:layout_marginBottom="20dip"
				android:text="@string/send_image_message_choice"
				android:id="@+id/choiceButton"
				android:textColor="#FFFFFF"
				android:layout_gravity="left" android:background="@drawable/rounded_button" android:layout_width="match_parent" android:layout_height="30dip"></Button>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/linearLayoutNewPicture"
			android:orientation="vertical"
			android:layout_marginLeft="170dip"
			android:layout_marginRight="30dip"
			android:layout_marginTop="10dip">

			<Button
				android:layout_marginBottom="20dip"
				android:text="@string/send_send"
				android:id="@+id/sendButton"
				android:textColor="#FFFFFF"
				android:layout_gravity="right" android:background="@drawable/rounded_button2" android:layout_height="30dip" android:layout_width="120dip"></Button>


		</LinearLayout>
	</RelativeLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:id="@+id/linearLayout2"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/preview"
			android:layout_gravity="center"
			android:layout_marginLeft="30dip"
			android:layout_marginRight="30dip"
			android:layout_marginBottom="30dip"></ImageView>
	</LinearLayout>
</LinearLayout>
